Java deprecation migration, Thread#getID() -> Thread#threadId() (#68)
This reduces the number of deprecated API usages by the verifier violations by 2.

https://docs.oracle.com/en/java/javase/24/docs/api/java.base/java/lang/Thread.html